--- a/src/index.html
+++ b/src/index.html
@@ -13,35 +13,35 @@
           <form name="regular" class="col s12">
             <div class="row">
               <div class="input-field col s6">
-                <input id="firstName" type="text" class="validate">
+                <input id="firstName" type="text" class="">
                 <label for="firstName">First Name</label>
               </div>
               <div class="input-field col s6">
-                <input id="lastName" type="text" class="validate">
+                <input id="lastName" type="text" class="">
                 <label for="lastName">Last Name</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="email" type="email" class="validate">
+                <input id="email" type="email" class="">
                 <label for="email">Email</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="password" type="password" class="validate">
+                <input id="password" type="password" class="">
                 <label for="password">Password</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="confirmPassword" type="password" class="validate">
+                <input id="confirmPassword" type="password" class="">
                 <label for="confirmPassword">Confirm Password</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <button class="btn waves-effect waves-light" type="button" name="action" id="submitted">Submit
                   <i class="material-icons right">send</i>
                 </button>
               </div>
