all done but there are some bugs

--- a/src/index.html
+++ b/src/index.html
@@ -13,29 +13,46 @@
           <form name="regular" class="col s12">
             <div class="row">
               <div class="input-field col s6">
-                <input id="firstName" type="text" class="">
+                <input id="firstName" type="text" class="input--ok">
+                <span class="input__span--color"></span>
                 <label for="firstName">First Name</label>
               </div>
               <div class="input-field col s6">
-                <input id="lastName" type="text" class="">
+                <input id="lastName" type="text" class="input--ok">
+                <span class="input__span--color"></span>
                 <label for="lastName">Last Name</label>
               </div>
             </div>
             <div class="row">
+                <div class="input-field col s6">
+                  <input id="date" type="date" class="input--ok">
+                  <span class="input__span--color"></span>
+                  <label for="date">Date</label>
+                </div>
+                <div class="input-field col s6">
+                  <input id="numbers" type="number" class="input--ok">
+                  <span class="input__span--color"></span>
+                  <label for="numbers">Number</label>
+                </div>
+              </div>
+            <div class="row">
               <div class="input-field col s12">
-                <input id="email" type="email" class="">
+                <input id="email" type="email" class="input--ok">
+                <span class="input__span--color"></span>
                 <label for="email">Email</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="password" type="password" class="">
+                <input id="password" type="password" class="input--ok">
+                <span class="input__span--color"></span>
                 <label for="password">Password</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="confirmPassword" type="password" class="">
+                <input id="confirmPassword" type="password" class="input--ok ">
+                <span class="input__span--color"></span>
                 <label for="confirmPassword">Confirm Password</label>
               </div>
             </div>
